@@ -1,29 +1,30 @@
 package ti4.service.emoji;
 
+import com.fasterxml.jackson.core.type.TypeReference;
 import java.time.temporal.ChronoField;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
-
-import org.jetbrains.annotations.NotNull;
-
 import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
+import lombok.experimental.UtilityClass;
 import net.dv8tion.jda.api.entities.emoji.ApplicationEmoji;
+import org.jetbrains.annotations.NotNull;
 import ti4.json.PersistenceManager;
-import ti4.message.BotLogger;
+import ti4.message.logging.BotLogger;
 
+@UtilityClass
 public class ApplicationEmojiCacheService {
 
     public static List<CachedEmoji> readCachedEmojis() {
         List<CachedEmoji> cache = null;
         try {
-            cache = PersistenceManager.readListFromJsonFile("emojis.json", CachedEmoji.class);
+            cache = PersistenceManager.readObjectFromJsonFile("emojis.json", new TypeReference<>() {});
         } catch (Exception e) {
             BotLogger.error("Failed to read json data for EmojiCache.", e);
         }
-        if (cache == null)
-            return List.of();
+        if (cache == null) return Collections.emptyList();
         return cache;
     }
 
@@ -61,6 +62,5 @@ public class ApplicationEmojiCacheService {
         public String toString() {
             return name + " " + id + " " + formatted + " " + timeCreated;
         }
-
     }
 }
