@@ -1,11 +1,11 @@
 package ti4.service.info;
 
+import java.util.Collections;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-
 import lombok.experimental.UtilityClass;
 import net.dv8tion.jda.api.entities.channel.middleman.MessageChannel;
 import ti4.helpers.ButtonHelper;
@@ -19,12 +19,13 @@ import ti4.map.Planet;
 import ti4.map.Player;
 import ti4.map.Tile;
 import ti4.map.UnitHolder;
-import ti4.message.BotLogger;
-import ti4.message.BotLogger.LogMessageOrigin;
 import ti4.message.MessageHelper;
+import ti4.message.logging.BotLogger;
+import ti4.message.logging.LogOrigin;
 import ti4.model.PublicObjectiveModel;
 import ti4.model.Source;
 import ti4.model.TechnologyModel.TechnologyType;
+import ti4.service.unit.CheckUnitContainmentService;
 
 @UtilityClass
 public class ListPlayerInfoService {
@@ -33,7 +34,13 @@ public class ListPlayerInfoService {
         return switch (objID) {
             // stage 1's
             case "push_boundaries" -> 2;
-            case "outer_rim", "ancient_monuments", "revolutionize", "deep_space", "lead", "research_outposts", "infrastructure" -> 3;
+            case "outer_rim",
+                    "ancient_monuments",
+                    "revolutionize",
+                    "deep_space",
+                    "lead",
+                    "research_outposts",
+                    "infrastructure" -> 3;
             case "make_history" -> 2;
             case "corner", "become_legend", "master_science", "build_defenses" -> 4;
             case "develop" -> 2;
@@ -63,9 +70,9 @@ public class ListPlayerInfoService {
             case "protect_border" -> 5;
             case "distant_lands" -> 2;
 
-            //Status Phase secrets
+            // Status Phase secrets
             case "pem" -> 8; // 8 production
-            case "sai" -> 1; //legendary
+            case "sai" -> 1; // legendary
             case "syc" -> 1; // control a planet in same system someone else does
             case "sb" -> 1; // have a PN in your play area
             case "otf" -> 9; // 9 gf on a planet without a dock
@@ -74,11 +81,11 @@ public class ListPlayerInfoService {
             case "eh" -> 12; // 12 influence
             case "dp" -> 3; // 3 laws in play
             case "dhw" -> 2; // 2 frags
-            case "dfat" -> 1; //nexus
+            case "dfat" -> 1; // nexus
             case "te" -> 1; // be next to HS
             case "ose" -> 3; // control rex and have 3 ships
-            case "mrm" -> 4; //4 hazardous
-            case "mlp" -> 4; //4 techs of a color
+            case "mrm" -> 4; // 4 hazardous
+            case "mlp" -> 4; // 4 techs of a color
             case "mp" -> 4; // 4 industrial
             case "lsc" -> 3; // 3 anomalies
             case "fwm" -> 3; // 3 SD
@@ -119,30 +126,29 @@ public class ListPlayerInfoService {
 
     record ObjectiveResult(boolean canFullyMeet, int closenessScore) {}
 
-    public ObjectiveResult checkObjective(List<String> planets, int tradeGoods, int goal, Player player, Game game, int closestScore) {
+    private ObjectiveResult checkObjective(
+            List<String> planets, int tradeGoods, int goal, Player player, Game game, int closestScore) {
         return backtrack(planets, 0, 0, 0, new HashSet<>(), tradeGoods, goal, player, game, closestScore);
     }
 
     private ObjectiveResult backtrack(
-        List<String> planets,
-        int currentResources,
-        int currentInfluence,
-        int index,
-        Set<String> usedPlanets,
-        int remainingTradeGoods,
-        int goal,
-        Player player,
-        Game game,
-        int closestScore
-    ) {
+            List<String> planets,
+            int currentResources,
+            int currentInfluence,
+            int index,
+            Set<String> usedPlanets,
+            int remainingTradeGoods,
+            int goal,
+            Player player,
+            Game game,
+            int closestScore) {
         // Success condition
         if (currentResources >= goal && currentInfluence >= goal) {
             return new ObjectiveResult(true, goal * 2);
         }
-        int additionalResources2 = Math.min(remainingTradeGoods,
-            Math.max(0, goal - currentResources));
-        int additionalInfluence2 = Math.min(remainingTradeGoods - additionalResources2,
-            Math.max(0, goal - currentInfluence));
+        int additionalResources2 = Math.min(remainingTradeGoods, Math.max(0, goal - currentResources));
+        int additionalInfluence2 =
+                Math.min(remainingTradeGoods - additionalResources2, Math.max(0, goal - currentInfluence));
 
         int newResources2 = currentResources + additionalResources2;
         int newInfluence2 = currentInfluence + additionalInfluence2;
@@ -166,10 +172,9 @@ public class ListPlayerInfoService {
         // If we've run out of planets, try using trade goods
         if (index >= planets.size()) {
             // Try using remaining trade goods for resources
-            int additionalResources = Math.min(remainingTradeGoods,
-                Math.max(0, goal - currentResources));
-            int additionalInfluence = Math.min(remainingTradeGoods - additionalResources,
-                Math.max(0, goal - currentInfluence));
+            int additionalResources = Math.min(remainingTradeGoods, Math.max(0, goal - currentResources));
+            int additionalInfluence =
+                    Math.min(remainingTradeGoods - additionalResources, Math.max(0, goal - currentInfluence));
 
             int newResources = currentResources + additionalResources;
             int newInfluence = currentInfluence + additionalInfluence;
@@ -187,13 +192,20 @@ public class ListPlayerInfoService {
 
         Planet planet = game.getPlanetsInfo().get(current);
         if (planet == null) {
-            BotLogger.warning(new LogMessageOrigin(player), "ListPlayerInfoService: Planet \"" + current + "\" not found for game " + game.getName());
-            return backtrack(planets,
-                currentResources,
-                currentInfluence,
-                index + 1,
-                usedPlanets,
-                remainingTradeGoods, goal, player, game, closestScore);
+            BotLogger.warning(
+                    new LogOrigin(player),
+                    "ListPlayerInfoService: Planet \"" + current + "\" not found for game " + game.getName());
+            return backtrack(
+                    planets,
+                    currentResources,
+                    currentInfluence,
+                    index + 1,
+                    usedPlanets,
+                    remainingTradeGoods,
+                    goal,
+                    player,
+                    game,
+                    closestScore);
         }
         int resources = planet.getResources();
         int influence = planet.getInfluence();
@@ -202,12 +214,17 @@ public class ListPlayerInfoService {
             influence += planet.getResources();
         }
         if (resources > 0) {
-            ObjectiveResult resourceResult = backtrack(planets,
-                currentResources + resources,
-                currentInfluence,
-                index + 1,
-                usedPlanets,
-                remainingTradeGoods, goal, player, game, closestScore);
+            ObjectiveResult resourceResult = backtrack(
+                    planets,
+                    currentResources + resources,
+                    currentInfluence,
+                    index + 1,
+                    usedPlanets,
+                    remainingTradeGoods,
+                    goal,
+                    player,
+                    game,
+                    closestScore);
             closestScore = Math.max(resourceResult.closenessScore, closestScore);
             if (resourceResult.canFullyMeet()) {
                 return resourceResult;
@@ -215,12 +232,17 @@ public class ListPlayerInfoService {
         }
         // Try using planet for influence
         if (influence > 0) {
-            ObjectiveResult influenceResult = backtrack(planets,
-                currentResources,
-                currentInfluence + influence,
-                index + 1,
-                usedPlanets,
-                remainingTradeGoods, goal, player, game, closestScore);
+            ObjectiveResult influenceResult = backtrack(
+                    planets,
+                    currentResources,
+                    currentInfluence + influence,
+                    index + 1,
+                    usedPlanets,
+                    remainingTradeGoods,
+                    goal,
+                    player,
+                    game,
+                    closestScore);
             closestScore = Math.max(influenceResult.closenessScore, closestScore);
             if (influenceResult.canFullyMeet()) {
                 return influenceResult;
@@ -228,15 +250,21 @@ public class ListPlayerInfoService {
         }
 
         // Skip this planet
-        return backtrack(planets,
-            currentResources,
-            currentInfluence,
-            index + 1,
-            usedPlanets,
-            remainingTradeGoods, goal, player, game, closestScore);
+        return backtrack(
+                planets,
+                currentResources,
+                currentInfluence,
+                index + 1,
+                usedPlanets,
+                remainingTradeGoods,
+                goal,
+                player,
+                game,
+                closestScore);
     }
 
-    public static void displayerScoringProgression(Game game, boolean onlyThisGameObj, MessageChannel channel, String stage1sOrTwos) {
+    public static void displayerScoringProgression(
+            Game game, boolean onlyThisGameObj, MessageChannel channel, String stage1sOrTwos) {
         StringBuilder msg = new StringBuilder();
         int x = 1;
         if (onlyThisGameObj) {
@@ -259,13 +287,13 @@ public class ListPlayerInfoService {
         } else {
             for (String id : Mapper.getPublicObjectives().keySet()) {
                 if (Mapper.getPublicObjective(id).getSource() == Source.ComponentSource.pok
-                    || Mapper.getPublicObjective(id).getSource() == Source.ComponentSource.base) {
-                    if (stage1sOrTwos.equalsIgnoreCase("" + Mapper.getPublicObjective(id).getPoints())
-                        || stage1sOrTwos.equalsIgnoreCase("both")) {
+                        || Mapper.getPublicObjective(id).getSource() == Source.ComponentSource.base) {
+                    if (stage1sOrTwos.equalsIgnoreCase(
+                                    "" + Mapper.getPublicObjective(id).getPoints())
+                            || "both".equalsIgnoreCase(stage1sOrTwos)) {
                         msg.append(representScoring(game, id, x)).append("\n");
                         x++;
                     }
-
                 }
             }
         }
@@ -276,10 +304,11 @@ public class ListPlayerInfoService {
         return representScoring(game, objID, x, false);
     }
 
-    public static String representScoring(Game game, String objID, int x, boolean secret) {
+    private static String representScoring(Game game, String objID, int x, boolean secret) {
         StringBuilder representation;
         if (secret) {
-            representation = new StringBuilder(x + ". " + SecretObjectiveInfoService.getSecretObjectiveRepresentation(objID) + "> ");
+            representation = new StringBuilder(
+                    x + ". " + SecretObjectiveInfoService.getSecretObjectiveRepresentation(objID) + "> ");
         } else {
             PublicObjectiveModel model = Mapper.getPublicObjective(objID);
             if (x > 0) {
@@ -292,21 +321,33 @@ public class ListPlayerInfoService {
             for (Player player : game.getRealPlayers()) {
                 representation.append(player.getFactionEmoji()).append(": ");
                 if (secret) {
-                    if (game.didPlayerScoreThisAlready(player.getUserID(), objID) || game.didPlayerScoreThisAlready(player.getUserID(), Mapper.getSecretObjectivesJustNames().get(objID))) {
+                    if (game.didPlayerScoreThisAlready(player.getUserID(), objID)
+                            || game.didPlayerScoreThisAlready(
+                                    player.getUserID(),
+                                    Mapper.getSecretObjectivesJustNames().get(objID))) {
                         representation.append("✅  ");
                     } else {
                         if (getObjectiveThreshold(objID, game) > 0) {
-                            representation.append(" (").append(getPlayerProgressOnObjective(objID, game, player)).append("/").append(getObjectiveThreshold(objID, game)).append(")  ");
+                            representation
+                                    .append(" (")
+                                    .append(getPlayerProgressOnObjective(objID, game, player))
+                                    .append("/")
+                                    .append(getObjectiveThreshold(objID, game))
+                                    .append(")  ");
                         } else {
                             representation.append("0/1  ");
                         }
                     }
                 } else {
                     if (game.getRevealedPublicObjectives().containsKey(objID)
-                        && game.didPlayerScoreThisAlready(player.getUserID(), objID)) {
+                            && game.didPlayerScoreThisAlready(player.getUserID(), objID)) {
                         representation.append("✅  ");
                     } else {
-                        representation.append(getPlayerProgressOnObjective(objID, game, player)).append("/").append(getObjectiveThreshold(objID, game)).append("  ");
+                        representation
+                                .append(getPlayerProgressOnObjective(objID, game, player))
+                                .append("/")
+                                .append(getObjectiveThreshold(objID, game))
+                                .append("  ");
                     }
                 }
             }
@@ -314,27 +355,37 @@ public class ListPlayerInfoService {
         return representation.toString();
     }
 
-    public static String representSecrets(Game game) {
+    private static String representSecrets(Game game) {
         StringBuilder representation = new StringBuilder("__**Scored Secret Objectives**__\n> ");
         if (!game.isFowMode()) {
             for (Player player : game.getRealPlayers()) {
-                representation.append(player.getFactionEmoji()).append(": ").append(player.getSoScored()).append("/").append(player.getMaxSOCount()).append("  ");
+                representation
+                        .append(player.getFactionEmoji())
+                        .append(": ")
+                        .append(player.getSoScored())
+                        .append("/")
+                        .append(player.getMaxSOCount())
+                        .append("  ");
             }
         }
         return representation.toString();
     }
 
-    public static String representSupports(Game game) {
+    private static String representSupports(Game game) {
         StringBuilder representation = new StringBuilder("__**Support Victory Points**__\n> ");
         if (!game.isFowMode()) {
             for (Player player : game.getRealPlayers()) {
-                representation.append(player.getFactionEmoji()).append(": ").append(player.getSupportForTheThroneVictoryPoints()).append("/1  ");
+                representation
+                        .append(player.getFactionEmoji())
+                        .append(": ")
+                        .append(player.getSupportForTheThroneVictoryPoints())
+                        .append("/1  ");
             }
         }
         return representation.toString();
     }
 
-    public static String getTransferablePointRepresentation(String objectiveId) {
+    private static String getTransferablePointRepresentation(String objectiveId) {
         return switch (objectiveId) {
             case Constants.VOICE_OF_THE_COUNCIL_PO, "Shard of the Throne", "Political Censure" -> objectiveId;
             case "Shard of the Throne (1)", "Shard of the Throne (2)", "Shard of the Throne (3)" -> objectiveId;
@@ -343,12 +394,12 @@ public class ListPlayerInfoService {
         };
     }
 
-    public static boolean gameHasTransferablePoints(Game game) {
+    private static boolean gameHasTransferablePoints(Game game) {
         return game.getCustomPublicVP().keySet().stream()
-            .anyMatch(obj -> getTransferablePointRepresentation(obj) != null);
+                .anyMatch(obj -> getTransferablePointRepresentation(obj) != null);
     }
 
-    public static String representTransferablePoints(Game game) {
+    private static String representTransferablePoints(Game game) {
         StringBuilder representation = new StringBuilder("__**Transferable Points**__");
         if (!game.isFowMode()) {
             for (var objective : game.getCustomPublicVP().entrySet()) {
@@ -357,28 +408,37 @@ public class ListPlayerInfoService {
 
                 List<String> scoringPlayers = game.getScoredPublicObjectives().get(objective.getKey());
                 if (scoringPlayers == null) {
-                    scoringPlayers = List.of();
+                    scoringPlayers = Collections.emptyList();
                 }
                 representation
-                    .append("\n> ")
-                    .append(mutablePointRepresentation)
-                    .append(" (").append(objective.getValue()).append(" VP)")
-                    .append(": ")
-                    .append(scoringPlayers.stream()
-                        .map(game::getPlayer)
-                        .filter(Objects::nonNull)
-                        .map(Player::getRepresentationNoPing)
-                        .reduce((a, b) -> a + ", " + b).orElse("Not currently held"));
+                        .append("\n> ")
+                        .append(mutablePointRepresentation)
+                        .append(" (")
+                        .append(objective.getValue())
+                        .append(" VP)")
+                        .append(": ")
+                        .append(scoringPlayers.stream()
+                                .map(game::getPlayer)
+                                .filter(Objects::nonNull)
+                                .map(Player::getRepresentationNoPing)
+                                .reduce((a, b) -> a + ", " + b)
+                                .orElse("Not currently held"));
             }
         }
         return representation.toString();
     }
 
-    public static String representTotalVPs(Game game) {
+    private static String representTotalVPs(Game game) {
         StringBuilder representation = new StringBuilder("__**Total Victory Points**__\n> ");
         if (!game.isFowMode()) {
             for (Player player : game.getRealPlayers()) {
-                representation.append(player.getFactionEmoji()).append(": ").append(player.getTotalVictoryPoints()).append("/").append(game.getVp()).append("  ");
+                representation
+                        .append(player.getFactionEmoji())
+                        .append(": ")
+                        .append(player.getTotalVictoryPoints())
+                        .append("/")
+                        .append(game.getVp())
+                        .append("  ");
             }
         }
         return representation.toString();
@@ -404,8 +464,9 @@ public class ListPlayerInfoService {
             case "outer_rim", "control_borderlands", "control_borderlands_omegaphase" -> {
                 int edge = 0;
                 for (Tile tile : game.getTileMap().values()) {
-                    if (FoWHelper.playerHasUnitsInSystem(player, tile) && tile.isEdgeOfBoard(game)
-                        && tile != player.getHomeSystemTile()) {
+                    if (FoWHelper.playerHasUnitsInSystem(player, tile)
+                            && tile.isEdgeOfBoard(game)
+                            && tile != player.getHomeSystemTile()) {
                         edge++;
                     }
                 }
@@ -423,12 +484,15 @@ public class ListPlayerInfoService {
             }
             case "infrastructure", "protect_border" -> {
                 int counter = 0;
+                int maxPlanets = counter;
                 for (String planet : player.getPlanetsAllianceMode()) {
                     UnitHolder uH = ButtonHelper.getUnitHolderFromPlanetName(planet, game);
-                    if (uH != null && game.getTileFromPlanet(planet) != player.getHomeSystemTile()
-                        && (uH.getUnitCount(Units.UnitType.Spacedock, player) > 0
-                            || uH.getUnitCount(Units.UnitType.Pds, player) > 0)) {
-                        counter++;
+                    if (uH != null && game.getTileFromPlanet(planet) != player.getHomeSystemTile()) {
+                        if (uH.getUnitCount(Units.UnitType.Spacedock, player) > 0
+                                || uH.getUnitCount(Units.UnitType.Pds, player) > 0) {
+                            counter++;
+                        }
+                        maxPlanets++;
                     }
                 }
                 if (player.hasAbility("privileged_citizenry")) {
@@ -436,10 +500,6 @@ public class ListPlayerInfoService {
                 }
                 if (player.hasAbility("orbital_foundries")) {
                     counter += ButtonHelper.getNumberOfUnitsOnTheBoard(game, player, "warsun", false);
-                }
-                int maxPlanets = counter;
-                if (player.getHomeSystemTile() != null) {
-                    maxPlanets = Math.max(0, player.getPlanetsAllianceMode().size() - player.getHomeSystemTile().getPlanetUnitHolders().size());
                 }
                 return Math.min(counter, maxPlanets);
             }
@@ -465,7 +525,6 @@ public class ListPlayerInfoService {
             }
             case "master_science_omegaphase" -> {
                 return ButtonHelper.getNumberOfNonUnitUpgrades(player);
-
             }
             case "monument", "golden_age" -> {
                 int x = Helper.getPlayerResourcesAvailable(player, game) + player.getTg() + comms;
@@ -504,7 +563,8 @@ public class ListPlayerInfoService {
                 int count = 0;
                 Tile mecatol = game.getMecatolTile();
                 if (mecatol == null) return 2;
-                for (String pos : FoWHelper.getAdjacentTilesAndNotThisTile(game, mecatol.getPosition(), player, false)) {
+                for (String pos :
+                        FoWHelper.getAdjacentTilesAndNotThisTile(game, mecatol.getPosition(), player, false)) {
                     Tile tile2 = game.getTileByPosition(pos);
                     if (FoWHelper.playerHasShipsInSystem(player, tile2)) {
                         count++;
@@ -516,7 +576,8 @@ public class ListPlayerInfoService {
                 int count = 0;
                 Tile mecatol = game.getMecatolTile();
                 if (mecatol == null) return 3;
-                for (String pos : FoWHelper.getAdjacentTilesAndNotThisTile(game, mecatol.getPosition(), player, false)) {
+                for (String pos :
+                        FoWHelper.getAdjacentTilesAndNotThisTile(game, mecatol.getPosition(), player, false)) {
                     Tile tile2 = game.getTileByPosition(pos);
                     if (tile2.containsPlayersUnits(player)) {
                         count++;
@@ -541,7 +602,8 @@ public class ListPlayerInfoService {
                     int forInfluence = Math.min(3, Helper.getPlayerInfluenceAvailable(player, game));
                     return forTG + leftOverTg + forInfluence + forResources;
                 } else {
-                    return forTG + checkObjective(player.getReadiedPlanets(), leftOverTg, 3, player, game, 0).closenessScore;
+                    return forTG
+                            + checkObjective(player.getReadiedPlanets(), leftOverTg, 3, player, game, 0).closenessScore;
                 }
             }
             case "build_defenses", "massive_cities", "massive_cities_omegaphase" -> {
@@ -552,8 +614,9 @@ public class ListPlayerInfoService {
                 if (player.hasUnit("ghoti_flagship")) {
                     counter += ButtonHelper.getNumberOfUnitsOnTheBoard(game, player, "flagship", false);
                 }
-                return counter + ButtonHelper.getNumberOfUnitsOnTheBoard(game, player, "pds", false)
-                    + ButtonHelper.getNumberOfUnitsOnTheBoard(game, player, "sd", false);
+                return counter
+                        + ButtonHelper.getNumberOfUnitsOnTheBoard(game, player, "pds", false)
+                        + ButtonHelper.getNumberOfUnitsOnTheBoard(game, player, "sd", false);
             }
             case "lost_outposts", "ancient_monuments", "ancient_monuments_omegaphase" -> {
                 int count = 0;
@@ -562,7 +625,8 @@ public class ListPlayerInfoService {
                     if (planet.hasAttachment()) {
                         count++;
                     } else {
-                        if (planet.getName().contains("custodia") && game.getStoredValue("terraformedPlanet").equalsIgnoreCase(planet.getName())) {
+                        if (planet.getName().contains("custodia")
+                                && game.getStoredValue("terraformedPlanet").equalsIgnoreCase(planet.getName())) {
                             count++;
                         }
                     }
@@ -571,8 +635,8 @@ public class ListPlayerInfoService {
             }
             case "engineer_marvel" -> {
                 return ButtonHelper.getNumberOfUnitsOnTheBoard(game, player, "fs", false)
-                    + ButtonHelper.getNumberOfUnitsOnTheBoard(game, player, "lady", false)
-                    + ButtonHelper.getNumberOfUnitsOnTheBoard(game, player, "warsun", false);
+                        + ButtonHelper.getNumberOfUnitsOnTheBoard(game, player, "lady", false)
+                        + ButtonHelper.getNumberOfUnitsOnTheBoard(game, player, "warsun", false);
             }
             case "deep_space", "vast_territories", "vast_territories_omegaphase" -> {
                 return ButtonHelper.getNumberOfTilesPlayerIsInWithNoPlanets(game, player);
@@ -604,7 +668,7 @@ public class ListPlayerInfoService {
                 int count = 0;
                 for (String planet : player.getPlanets()) {
                     Tile tile = game.getTileFromPlanet(planet);
-                    if (tile != null && tile.isHomeSystem() && tile != player.getHomeSystemTile()) {
+                    if (tile != null && tile.isHomeSystem(game) && tile != player.getHomeSystemTile()) {
                         count++;
                     }
                 }
@@ -612,8 +676,9 @@ public class ListPlayerInfoService {
             }
             case "supremacy", "supremacy_omegaphase" -> {
                 int count = 0;
-                for (Tile tile : ButtonHelper.getTilesOfPlayersSpecificUnits(game, player, Units.UnitType.Flagship, Units.UnitType.Warsun, Units.UnitType.Lady)) {
-                    if ((tile.isHomeSystem() && tile != player.getHomeSystemTile()) || tile.isMecatol()) {
+                for (Tile tile : CheckUnitContainmentService.getTilesContainingPlayersUnits(
+                        game, player, Units.UnitType.Flagship, Units.UnitType.Warsun, Units.UnitType.Lady)) {
+                    if ((tile.isHomeSystem(game) && tile != player.getHomeSystemTile()) || tile.isMecatol()) {
                         count++;
                     }
                 }
@@ -630,7 +695,8 @@ public class ListPlayerInfoService {
                     int forInfluence = Math.min(6, Helper.getPlayerInfluenceAvailable(player, game));
                     return forTG + leftOverTg + forInfluence + forResources;
                 } else {
-                    return forTG + checkObjective(player.getReadiedPlanets(), leftOverTg, 6, player, game, 0).closenessScore;
+                    return forTG
+                            + checkObjective(player.getReadiedPlanets(), leftOverTg, 6, player, game, 0).closenessScore;
                 }
             }
             case "distant_lands", "distant_lands_omegaphase" -> {
@@ -652,7 +718,7 @@ public class ListPlayerInfoService {
                 // This number may be inaccurate when it's greater than 3, but it is always accurate for 2
                 return Math.min(planetsAdjToHomes.size(), homesAdjTo.size());
             }
-            //Status Phase secrets
+            // Status Phase secrets
             case "pem" -> {
                 return ButtonHelper.checkHighestProductionSystem(player, game); // 8 production
             }
@@ -661,7 +727,8 @@ public class ListPlayerInfoService {
                 for (String p : player.getPlanets()) {
                     Planet planet = game.getPlanetsInfo().get(p);
                     if (planet == null) {
-                        BotLogger.warning(new BotLogger.LogMessageOrigin(player), "Planet \"" + p + "\" not found for game " + game.getName());
+                        BotLogger.warning(
+                                new LogOrigin(player), "Planet \"" + p + "\" not found for game " + game.getName());
                     } else if (planet.isLegendary()) {
                         count++;
                     }
@@ -699,7 +766,7 @@ public class ListPlayerInfoService {
             }
             case "mtm" -> {
                 int count = 0;
-                for (String planet : player.getPlanets()) {
+                for (String planet : player.getPlanetsAllianceMode()) {
                     UnitHolder uH = ButtonHelper.getUnitHolderFromPlanetName(planet, game);
                     if (uH != null && uH.getUnitCount(Units.UnitType.Mech, player) > 0) {
                         count++;
@@ -729,7 +796,7 @@ public class ListPlayerInfoService {
             }
             case "dfat" -> {
                 Tile tile = Optional.ofNullable(game.getTileFromPlanet("mallice"))
-                    .orElseGet(() -> game.getTileFromPlanet("hexmallice"));
+                        .orElseGet(() -> game.getTileFromPlanet("hexmallice"));
                 if (!FoWHelper.playerHasUnitsInSystem(player, tile)) {
                     return 0;
                 } else {
@@ -746,8 +813,7 @@ public class ListPlayerInfoService {
                     if (tile == null) {
                         continue;
                     }
-                    for (String pos : FoWHelper.getAdjacentTiles(game, tile.getPosition(), player,
-                        false, false)) {
+                    for (String pos : FoWHelper.getAdjacentTiles(game, tile.getPosition(), player, false, false)) {
                         Tile tile2 = game.getTileByPosition(pos);
                         if (ButtonHelper.checkNumberShips(player, tile2) > 0) {
                             count++;
@@ -758,8 +824,7 @@ public class ListPlayerInfoService {
             }
             case "ose" -> {
                 Tile mecatol = game.getMecatolTile();
-                boolean controlsMecatol = player.getPlanets().stream()
-                    .anyMatch(Constants.MECATOLS::contains);
+                boolean controlsMecatol = player.getPlanets().stream().anyMatch(Constants.MECATOLS::contains);
                 if (!FoWHelper.playerHasUnitsInSystem(player, mecatol) || !controlsMecatol) {
                     return 0;
                 } else {
@@ -767,9 +832,9 @@ public class ListPlayerInfoService {
                 }
             }
             case "mrm" -> {
-                return ButtonHelper.getNumberOfXTypePlanets(player, game, "hazardous", false); //4 hazardous
+                return ButtonHelper.getNumberOfXTypePlanets(player, game, "hazardous", false); // 4 hazardous
             }
-            case "mlp" -> {//4 techs of a color
+            case "mlp" -> { // 4 techs of a color
                 int maxNum = 0;
                 for (TechnologyType type : TechnologyType.mainFour)
                     maxNum = Math.max(maxNum, ButtonHelper.getNumberOfCertainTypeOfTech(player, type));
@@ -782,8 +847,7 @@ public class ListPlayerInfoService {
                 int count = 0;
                 for (Tile tile : game.getTileMap().values()) {
                     if (ButtonHelper.checkNumberShips(player, tile) > 0) {
-                        for (String pos : FoWHelper.getAdjacentTiles(game, tile.getPosition(), player,
-                            false, false)) {
+                        for (String pos : FoWHelper.getAdjacentTiles(game, tile.getPosition(), player, false, false)) {
                             Tile tile2 = game.getTileByPosition(pos);
                             if (tile2.isAnomaly(game)) {
                                 count++;
@@ -812,14 +876,14 @@ public class ListPlayerInfoService {
                     if (!Mapper.getTech(nekroTech).getFaction().orElse("").isEmpty()) {
                         count += 1;
                     }
-
                 }
                 return count;
             }
             case "btgk" -> {
                 int alpha = 0;
                 for (Tile tile : game.getTileMap().values()) {
-                    if (FoWHelper.doesTileHaveAlpha(game, tile.getPosition()) && FoWHelper.playerHasShipsInSystem(player, tile)) {
+                    if (FoWHelper.doesTileHaveAlpha(game, tile.getPosition())
+                            && FoWHelper.playerHasShipsInSystem(player, tile)) {
                         alpha = 1;
                         break;
                     }
@@ -827,7 +891,8 @@ public class ListPlayerInfoService {
 
                 int beta = 0;
                 for (Tile tile : game.getTileMap().values()) {
-                    if (FoWHelper.doesTileHaveBeta(game, tile.getPosition()) && FoWHelper.playerHasShipsInSystem(player, tile)) {
+                    if (FoWHelper.doesTileHaveBeta(game, tile.getPosition())
+                            && FoWHelper.playerHasShipsInSystem(player, tile)) {
                         beta = 1;
                         break;
                     }
@@ -849,7 +914,8 @@ public class ListPlayerInfoService {
                     if (p2 == player) {
                         continue;
                     }
-                    for (Tile tile : ButtonHelper.getTilesOfPlayersSpecificUnits(game, p2, Units.UnitType.Spacedock)) {
+                    for (Tile tile : CheckUnitContainmentService.getTilesContainingPlayersUnits(
+                            game, p2, Units.UnitType.Spacedock)) {
                         if (ButtonHelper.checkNumberShips(player, tile) > 0) {
                             count++;
                         }
@@ -866,7 +932,6 @@ public class ListPlayerInfoService {
             case "fc" -> {
                 return player.getNeighbourCount(); // neighbors
             }
-
         }
         return 0;
     }
